# AgoraUpdate

./: .gitignore  build.gradle
demo/: CMakeLists.txt  build.gradle  proguard-rules.txt
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/ksyun/media/diversity/agorastreamer/agora/: MediaManager.java  RemoteDataObserver.java
demo/src/main/java/com/ksyun/media/diversity/agorastreamer/agora/kit/: AgoraRTCClient.java  AgoraRTCIO.java  KSYAgoraStreamer.java
demo/src/main/java/com/ksyun/media/diversity/agorastreamer/demo/: CameraActivity.java  CameraHintView.java  DemoActivity.java  DemoAudioFilter.java  DemoFilter.java  DemoFilter2.java  DemoFilter3.java  DemoFilter4.java  RGBABufDemoFilter.java  YUVI420BufDemoFilter.java
demo/src/main/jni/: jni_RemoteDataObserver.cpp  jni_RemoteDataObserver.h  remote_data_observer.cpp
demo/src/main/jni/include/: AgoraBase.h  IAgoraMediaEngine.h  IAgoraRtcEngine.h
demo/src/main/res/layout/: camera_activity.xml  demo_activity.xml
demo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
